--- a/docs/de-de/modules/maerkte/partials/mirakl-market-assistant.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-market-assistant.adoc
@@ -132,6 +132,34 @@ ifdef::voelkner[]
 | Hier definierst du die Einheit der Grundpreisangabe an der Variante. Gültige Werte sind `KG`, `L`, `M`, `M2` oder `M3`.
 endif::voelkner[]
 
+ifdef::voelkner[]
+| Datenfelder für Rabattpreise: +
+*Rabatt Startzeit* +
+*Rabatt Endzeit*
+| Optional kannst du zeitlich begrenzte Rabattpreise an Voelkner übermitteln.
+
+Voraussetzungen für den korrekten Export von Rabattpreisen:
+
+* Du hast einen Verkaufspreis des Typs *Aktionspreis* erstellt. +
+  *_Tipp:_* Vergiss nicht, für diesen Aktionspreis die Herkünfte *Mirakl* und *Voelkner* zu aktivieren.
+. Du hast eine Eigenschaft des Typs *Datum* für das Startdatum erstellt. Nenne diese Eigenschaft zum Beispiel *Voelkner Rabatt Startzeit*.
+. Du hast eine Eigenschaft des Typs *Datum* für das Enddatum erstellt. Nenne diese Eigenschaft zum Beispiel *Voelkner Rabatt Endzeit*.
+* Du hast im Assistenten die folgenden Zuordnungen vorgenommen:
+  ** Marktplatz-Datenfeld *Rabatt Startzeit* = plentymarkets Eigenschaft *Voelkner Rabatt Startzeit* des Typs *Datum*
+  ** Marktplatz-Datenfeld *Rabatt Endzeit* = plentymarkets Eigenschaft *Voelkner Rabatt Endzeit* des Typs *Datum*
+
+[.collapseBox]
+.Rabattpreis für Variante festlegen
+--
+. Verknüpfe den Verkaufspreis des Typs *Aktionspreis* mit der Variante.
+. Wähle einen Preis für den Rabattpreis.
+. Verknüpfe die Variante mit der Eigenschaft *Voelkner Rabatt Startzeit*.
+. Wähle ein Datum für die Eigenschaft. Der Rabattpreis wird an diesem Datum gestartet.
+. Verknüpfe die Variante mit der Eigenschaft *Voelkner Rabatt Endzeit*.
+. Wähle ein Datum für die Eigenschaft. Der Rabattpreis wird an diesem Datum beendet.
+--
+endif::voelkner[]
+
 2+^| Schritt *Optionen für Angebots-Export*
 
 | *Bestandsmenge für Varianten ohne Bestandsbindung ersetzen* +
