--- a/docs/de-de/modules/maerkte/partials/mirakl-volume-discounts.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-volume-discounts.adoc
@@ -11,25 +11,29 @@ Wenn du die Preise an der Variante speicherst, musst du Folgendes beachten:
 
 [[table-volume-discount]]
 .Beispiel für eine Preisstaffelung
-[cols="2,3a,3"]
+[cols="2,2,3a,3"]
 |===
-|Ab |Verkaufspreis-Einstellungen |Preis an Variante
+| Verkaufspreis |ab |Verkaufspreis-Einstellungen |Preis an Variante
 
+| Preis 1
 | 1 Stück
 | * *Ab Menge:* 1
 * *Herkunft:* *Mirakl* und *{market}*
 | 9,99 EUR
 
+| Preis 2
 | 3 Stück
 | * *Ab Menge:* 3
 * *Herkunft:* *Mirakl* und *{market}*
 | 9,69 EUR
 
+| Preis 3
 | 6 Stück
 | * *Ab Menge:* 6
 * *Herkunft:* *Mirakl* und *{market}*
 | 9,39 EUR
 
+| Preis 4
 | 9 Stück
 | * *Ab Menge:* 9
 * *Herkunft:* *Mirakl* und *{market}*
