--- a/docs/de-de/modules/maerkte/partials/mirakl-market-assistant.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-market-assistant.adoc
@@ -136,28 +136,37 @@ ifdef::voelkner[]
 | Datenfelder für Rabattpreise: +
 *Rabatt Startzeit* +
 *Rabatt Endzeit*
-| Optional kannst du zeitlich begrenzte Rabattpreise an Voelkner übermitteln.
+| Optional kannst du zeitlich begrenzte Rabattpreise an Voelkner übermitteln. Auch die Staffelpreise können rabattiert werden. Dazu erstellst du Aktionspreise mit denselben Werten für die Einstellung *Ab Menge* wie die Staffelpreise für {market}.
 
-Voraussetzungen für den korrekten Export von Rabattpreisen:
+*_Vorbereitungen:_*
 
-* Du hast einen Verkaufspreis des Typs *Aktionspreis* erstellt. +
-  *_Tipp:_* Vergiss nicht, für diesen Aktionspreis die Herkünfte *Mirakl* und *Voelkner* zu aktivieren.
-. Du hast eine Eigenschaft des Typs *Datum* für das Startdatum erstellt. Nenne diese Eigenschaft zum Beispiel *Voelkner Rabatt Startzeit*.
-. Du hast eine Eigenschaft des Typs *Datum* für das Enddatum erstellt. Nenne diese Eigenschaft zum Beispiel *Voelkner Rabatt Endzeit*.
-* Du hast im Assistenten die folgenden Zuordnungen vorgenommen:
+* Erstelle eine Eigenschaft des Typs *Datum* für das Startdatum. Nenne diese Eigenschaft zum Beispiel `Voelkner Rabatt Startzeit`.
+* Erstelle eine Eigenschaft des Typs *Datum* für das Enddatum. Nenne diese Eigenschaft zum Beispiel `Voelkner Rabatt Endzeit`.
+* Ordne in diesem Schritt des Assistenten die folgenden Datenfelder zu:
   ** Marktplatz-Datenfeld *Rabatt Startzeit* = plentymarkets Eigenschaft *Voelkner Rabatt Startzeit* des Typs *Datum*
   ** Marktplatz-Datenfeld *Rabatt Endzeit* = plentymarkets Eigenschaft *Voelkner Rabatt Endzeit* des Typs *Datum*
 
-[.collapseBox]
-.Rabattpreis für Variante festlegen
---
+*_Aktionspreis für Verkaufspreis erstellen:_*
+
+* Erstelle einen Verkaufspreis des Typs *Aktionspreis*. +
+  *_Tipp:_* Vergiss nicht, für diesen Aktionspreis die Herkünfte *Mirakl* und *Voelkner* zu aktivieren.
+
+*_Aktionspreis für Staffelpreise erstellen:_*
+
+* Erstelle genauso viele Verkaufspreise des Typs *Aktionspreis*, wie du Staffelpreise für {market} hast.
+  *_Tipp:_* Vergiss nicht, für die Aktionspreise die Herkünfte *Mirakl* und *Voelkner* zu aktivieren.
+* Gib für jeden Aktionspreis denselben Wert für die Einstellung *Ab Menge* ein wie den Verkaufspreisen für die Staffelung.
+
+[.instruction]
+Rabattpreis für Variante festlegen:
+
 . Verknüpfe den Verkaufspreis des Typs *Aktionspreis* mit der Variante.
 . Wähle einen Preis für den Rabattpreis.
 . Verknüpfe die Variante mit der Eigenschaft *Voelkner Rabatt Startzeit*.
 . Wähle ein Datum für die Eigenschaft. Der Rabattpreis wird an diesem Datum gestartet.
 . Verknüpfe die Variante mit der Eigenschaft *Voelkner Rabatt Endzeit*.
 . Wähle ein Datum für die Eigenschaft. Der Rabattpreis wird an diesem Datum beendet.
---
+
 endif::voelkner[]
 
 2+^| Schritt *Optionen für Angebots-Export*
