--- a/docs/en-gb/modules/business-decisions/pages/average-number-of-order-items.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/average-number-of-order-items.adoc
@@ -1,4 +1,4 @@
-= Average number of order items
+= = Average number of order items
 :keywords: order items, quantity sold, average, average number of order items, Business Intelligence, BI, statistics, key figure, key figures, Dashboard, raw data, report, reports, KPI, KPIs, Key Performance Indicator
 :id: E5VUVYW
 :author: team-order-core, team-bi
@@ -33,7 +33,7 @@ include::partial$itemvariations.adoc[]
 include::partial$plentyBI-activate-raw-data.adoc[]
 
 [#400]
-== plentyBI Edition
+== plentyBI edition
 
 include::partial$key-figure-requirement-edition.adoc[]
 
@@ -213,197 +213,155 @@ include::partial$payment-date.adoc[]
 
 include::partial$filter-introduction.adoc[]
 
-// Client
+// Subscription item ended at
 
-include::partial$client.adoc[]
+include::partial$subscription-item-ended-at.adoc[]
 
 [.collapseBox]
 .Comparison operators available for this filter
 --
 
-
-
-:filter: selected clients (icon:check-square[role="blue"])
+:filter-ending: dates selected
+:filter: dates selected
 :commas:
 
-[[table-key-figures-operators-client]]
-[cols="1,1,3"]
-|====
-| Comparison operator | Symbol | Explanation
-
-include::partial$corresponds-to-one-of-these-values.adoc[]
-
-include::partial$corresponds-to-none-of-these-values.adoc[]
-
-|====
-
---
-
-// Order referrer
-
-include::partial$order-referrer.adoc[]
-
-[.collapseBox]
-.Relational operators available for this filter
---
-
-:filter-ending: selected order referrers (icon:check-square[role="blue"])
-
-
-:filter: selected order referrers (icon:check-square[role="blue"])
-:commas:
-
-[[table-key-figures-operators-order-referrer]]
+[[table-key-figures-operators-subscription-item-ended-at]]
 [cols="1,1,3"]
 |====
 | Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
-include::partial$is-not-equal.adoc[]
+include::partial$is-between.adoc[]
 
-include::partial$corresponds-to-one-of-these-values.adoc[]
-
-include::partial$corresponds-to-none-of-these-values.adoc[]
-
-include::partial$less-than.adoc[]
+include::partial$greater-than-or-equal-to.adoc[]
 
 include::partial$less-than-or-equal-to.adoc[]
 
 include::partial$greater-than.adoc[]
 
-include::partial$greater-than-or-equal-to.adoc[]
+include::partial$less-than.adoc[]
+
+|====
+
+--
+
+// Subscription item started at
+
+include::partial$subscription-item-started-at.adoc[]
+
+[.collapseBox]
+.Comparison operators available for this filter
+--
+
+:filter-ending: dates selected
+:filter: dates selected
+:commas:
+
+[[table-key-figures-operators-subscription-item-started-at]]
+[cols="1,1,3"]
+|====
+| Comparison operator | Symbol | Explanation
+
+include::partial$is-equal-to.adoc[]
 
 include::partial$is-between.adoc[]
 
-|====
-
---
-
-// Order type
-
-include::partial$order-type.adoc[]
-
-_Note_ that the quantity of order items in credit notes and returns are subtracted from the average number of order items if you select these order types in this filter.
-
-[.collapseBox]
-.Comparison operators available for this filter
---
-
-:filter-ending: selected order types (icon:check-square[role="blue"])
-
-:filter: selected order types (icon:check-square[role="blue"])
-:commas:
-
-[[table-key-figures-operators-ordertype]]
-[cols="1,1,3"]
-|====
-| Comparison operator | Symbol | Explanation
-
-include::partial$is-equal-to.adoc[]
-
-include::partial$is-not-equal.adoc[]
-
-include::partial$corresponds-to-one-of-these-values.adoc[]
-
-|====
-
---
-
-// Order status
-
-include::partial$order-status.adoc[]
-
-[.collapseBox]
-.Comparison operators available for this filter
---
-
-:filter-ending: selected order statuses (icon:check-square[role="blue"])
-
-
-:filter: selected order statuses (icon:check-square[role="blue"])
-:commas:
-
-[[table-key-figures-operators-orderstatus]]
-[cols="1,1,3"]
-|====
-| Comparison operator | Symbol | Explanation
-
-include::partial$corresponds-to-one-of-these-values.adoc[]
-
-include::partial$corresponds-to-none-of-these-values.adoc[]
-
-include::partial$is-equal-to.adoc[]
-
-include::partial$is-not-equal.adoc[]
-
-include::partial$less-than.adoc[]
+include::partial$greater-than-or-equal-to.adoc[]
 
 include::partial$less-than-or-equal-to.adoc[]
 
 include::partial$greater-than.adoc[]
 
-include::partial$greater-than-or-equal-to.adoc[]
+include::partial$less-than.adoc[]
+
+|====
+
+--
+
+// Subscription ended at
+
+include::partial$subscription-ended-at.adoc[]
+
+[.collapseBox]
+.Comparison operators available for this filter
+--
+
+:filter-ending: dates selected
+:filter: dates selected
+:commas:
+
+[[table-key-figures-operators-subscription-ended-at]]
+[cols="1,1,3"]
+|====
+| Comparison operator | Symbol | Explanation
+
+include::partial$is-equal-to.adoc[]
 
 include::partial$is-between.adoc[]
 
+include::partial$greater-than-or-equal-to.adoc[]
+
+include::partial$less-than-or-equal-to.adoc[]
+
+include::partial$greater-than.adoc[]
+
+include::partial$less-than.adoc[]
+
 |====
 
 --
 
-// Order property type
+// Subscription started at
 
-include::partial$order-property-type.adoc[]
+include::partial$subscription-started-at.adoc[]
 
 [.collapseBox]
 .Comparison operators available for this filter
 --
 
-:filter-ending: selected order property types (icon:check-square[role="blue"])
-
-
-:filter: selected order property types (icon:check-square[role="blue"])
+:filter-ending: dates selected
+:filter: dates selected
 :commas:
 
-[[table-key-figures-operators-order-property-type]]
+[[table-key-figures-operators-subscription-started-at]]
 [cols="1,1,3"]
 |====
 | Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
-include::partial$is-not-equal.adoc[]
+include::partial$is-between.adoc[]
 
-include::partial$corresponds-to-one-of-these-values.adoc[]
+include::partial$greater-than-or-equal-to.adoc[]
 
-include::partial$corresponds-to-none-of-these-values.adoc[]
+include::partial$less-than-or-equal-to.adoc[]
+
+include::partial$greater-than.adoc[]
+
+include::partial$less-than.adoc[]
 
 |====
 
 --
 
-// Order property value
+// Amazon account
 
-include::partial$order-property-value.adoc[]
+include::partial$amazon-account.adoc[]
 
 [.collapseBox]
 .Comparison operators available for this filter
 --
 
-:filter-ending: entered values
 
 
-:filter: entered values
+:filter: selected Amazon accounts (material:check_box[role=skyBlue])
 :commas:
 
-[[table-key-figures-operators-order-property-value]]
+[[table-key-figures-operators-amazon-account]]
 [cols="1,1,3"]
 |====
 | Comparison operator | Symbol | Explanation
-
-include::partial$is-equal-to.adoc[]
-
-include::partial$is-not-equal.adoc[]
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -442,6 +400,47 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 
 --
 
+// Order referrer
+
+include::partial$order-referrer.adoc[]
+
+[.collapseBox]
+.Comparison operators available for this filter
+--
+
+:filter-ending: selected order referrers (material:check_box[role=skyBlue])
+
+
+:filter: selected order referrers (material:check_box[role=skyBlue])
+:commas:
+
+[[table-key-figures-operators-order-referrer]]
+[cols="1,1,3"]
+|====
+| Comparison operator | Symbol | Explanation
+
+include::partial$is-equal-to.adoc[]
+
+include::partial$is-not-equal.adoc[]
+
+include::partial$corresponds-to-one-of-these-values.adoc[]
+
+include::partial$corresponds-to-none-of-these-values.adoc[]
+
+include::partial$less-than.adoc[]
+
+include::partial$less-than-or-equal-to.adoc[]
+
+include::partial$greater-than.adoc[]
+
+include::partial$greater-than-or-equal-to.adoc[]
+
+include::partial$is-between.adoc[]
+
+|====
+
+--
+
 // Order item type
 
 include::partial$order-item-type.adoc[]
@@ -452,7 +451,7 @@ include::partial$order-item-type.adoc[]
 
 
 
-:filter: selected order item types (icon:check-square[role="blue"])
+:filter: selected order item types (material:check_box[role=skyBlue])
 :commas:
 
 [[table-key-figures-operators-orderitemtype]]
@@ -463,6 +462,136 @@ include::partial$order-item-type.adoc[]
 include::partial$corresponds-to-none-of-these-values.adoc[]
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
+|====
+
+--
+
+// Order status
+
+include::partial$order-status.adoc[]
+
+[.collapseBox]
+.Comparison operators available for this filter
+--
+
+:filter-ending: selected order statuses (material:check_box[role=skyBlue])
+
+
+:filter: selected order statuses (material:check_box[role=skyBlue])
+:commas:
+
+[[table-key-figures-operators-orderstatus]]
+[cols="1,1,3"]
+|====
+| Comparison operator | Symbol | Explanation
+
+include::partial$corresponds-to-one-of-these-values.adoc[]
+
+include::partial$corresponds-to-none-of-these-values.adoc[]
+
+include::partial$is-equal-to.adoc[]
+
+include::partial$is-not-equal.adoc[]
+
+include::partial$less-than.adoc[]
+
+include::partial$less-than-or-equal-to.adoc[]
+
+include::partial$greater-than.adoc[]
+
+include::partial$greater-than-or-equal-to.adoc[]
+
+include::partial$is-between.adoc[]
+
+|====
+
+--
+
+// Order type
+
+include::partial$order-type.adoc[]
+
+_Note_ that the quantity of order items in credit notes and returns are subtracted from the average number of order items if you select these order types in this filter.
+
+[.collapseBox]
+.Comparison operators available for this filter
+--
+
+:filter-ending: selected order types (material:check_box[role=skyBlue])
+
+
+:commas:
+
+[[table-key-figures-operators-ordertype]]
+[cols="1,1,3"]
+|====
+| Comparison operator | Symbol | Explanation
+
+include::partial$is-equal-to.adoc[]
+
+include::partial$is-not-equal.adoc[]
+
+include::partial$corresponds-to-one-of-these-values.adoc[]
+
+|====
+
+--
+
+// Paid at
+
+include::partial$paid-at.adoc[]
+
+[.collapseBox]
+.Comparison operators available for this filter
+--
+
+:filter-ending: dates selected
+:filter: dates selected
+:commas:
+
+[[table-key-figures-operators-paid-at]]
+[cols="1,1,3"]
+|====
+| Comparison operator | Symbol | Explanation
+
+include::partial$is-equal-to.adoc[]
+
+include::partial$is-between.adoc[]
+
+include::partial$greater-than-or-equal-to.adoc[]
+
+include::partial$less-than-or-equal-to.adoc[]
+
+include::partial$greater-than.adoc[]
+
+include::partial$less-than.adoc[]
+
+|====
+
+--
+
+// eBay account
+
+include::partial$ebay-account.adoc[]
+
+[.collapseBox]
+.Comparison operators available for this filter
+--
+
+
+
+:filter: selected eBay accounts (material:check_box[role=skyBlue])
+:commas:
+
+[[table-key-figures-operators-ebay-account]]
+[cols="1,1,3"]
+|====
+| Comparison operator | Symbol | Explanation
+
+include::partial$corresponds-to-one-of-these-values.adoc[]
+
+include::partial$corresponds-to-none-of-these-values.adoc[]
+
 |====
 
 --
@@ -497,216 +626,6 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 
 --
 
-// Invoice country
-
-include::partial$invoice-country.adoc[]
-
-[.collapseBox]
-.Comparison operators available for this filter
---
-
-:filter-ending: selected invoice countries (icon:check-square[role="blue"])
-
-
-:filter: selected invoice countries (icon:check-square[role="blue"])
-:commas:
-
-[[table-key-figures-operators-invoice-countries]]
-[cols="1,1,3"]
-|====
-| Comparison operator | Symbol | Explanation
-
-include::partial$is-equal-to.adoc[]
-
-include::partial$is-not-equal.adoc[]
-
-include::partial$corresponds-to-one-of-these-values.adoc[]
-
-include::partial$corresponds-to-none-of-these-values.adoc[]
-
-|====
-
---
-
-// Delivery country
-
-include::partial$delivery-country.adoc[]
-
-[.collapseBox]
-.Comparison operators available for this filter
---
-
-:filter-ending: selected countries of delivery (icon:check-square[role="blue"])
-
-
-:filter: selected countries of delivery (icon:check-square[role="blue"])
-:commas:
-
-[[table-key-figures-operators-delivery-countries]]
-[cols="1,1,3"]
-|====
-| Comparison operator | Symbol | Explanation
-
-include::partial$is-equal-to.adoc[]
-
-include::partial$is-not-equal.adoc[]
-
-include::partial$corresponds-to-one-of-these-values.adoc[]
-
-include::partial$corresponds-to-none-of-these-values.adoc[]
-
-|====
-
---
-
-// Outgoing items booked
-
-include::partial$outgoing-items-booked.adoc[]
-
-[.collapseBox]
-.Comparison operators available for this filter
---
-
-:filter: selected values (icon:check-square[role="blue"])
-:commas:
-
-[[table-key-figures-operators-outgoing-items-booked]]
-[cols="1,1,3"]
-|====
-| Comparison operator | Symbol | Explanation
-
-include::partial$is-equal-to.adoc[]
-
-|====
-
---
-
-// Payment status
-
-include::partial$payment-status.adoc[]
-
-[.collapseBox]
-.Comparison operators available for this filter
---
-
-:filter: selected values (icon:check-square[role="blue"])
-:commas:
-
-[[table-key-figures-operators-payment-status]]
-[cols="1,1,3"]
-|====
-| Comparison operator | Symbol | Explanation
-
-include::partial$is-equal-to.adoc[]
-
-|====
-
---
-
-Warehouse
-
-include::partial$warehouse.adoc[]
-
-[.collapseBox]
-.Comparison operators available for this filter
---
-
-
-
-:filter: selected warehouses (icon:check-square[role="blue"])
-:commas:
-
-[[table-key-figures-operators-warehouse]]
-[cols="1,1,3"]
-|====
-| Comparison operator | Symbol | Explanation
-
-include::partial$corresponds-to-one-of-these-values.adoc[]
-
-include::partial$corresponds-to-none-of-these-values.adoc[]
-
-|====
-
---
-
-// Amazon account
-
-include::partial$amazon-account.adoc[]
-
-[.collapseBox]
-.Comparison operators available for this filter
---
-
-
-
-:filter: selected Amazon accounts (icon:check-square[role="blue"])
-:commas:
-
-[[table-key-figures-operators-amazon-account]]
-[cols="1,1,3"]
-|====
-| Comparison operator | Symbol | Explanation
-
-include::partial$corresponds-to-one-of-these-values.adoc[]
-
-include::partial$corresponds-to-none-of-these-values.adoc[]
-
-|====
-
---
-
-// eBay account
-
-include::partial$ebay-account.adoc[]
-
-[.collapseBox]
-.Comparison operators available for this filter
---
-
-
-
-:filter: selected eBay accounts (icon:check-square[role="blue"])
-:commas:
-
-[[table-key-figures-operators-ebay-account]]
-[cols="1,1,3"]
-|====
-| Comparison operator | Symbol | Explanation
-
-include::partial$corresponds-to-one-of-these-values.adoc[]
-
-include::partial$corresponds-to-none-of-these-values.adoc[]
-
-|====
-
---
-
-// Shipping profile
-
-include::partial$shipping-profile.adoc[]
-
-[.collapseBox]
-.Comparison operators available for this filter
---
-
-
-
-:filter: selected shipping profiles (icon:check-square[role="blue"])
-:commas:
-
-[[table-key-figures-operators-shipping-profile]]
-[cols="1,1,3"]
-|====
-| Comparison operator | Symbol | Explanation
-
-include::partial$corresponds-to-one-of-these-values.adoc[]
-
-include::partial$corresponds-to-none-of-these-values.adoc[]
-
-|====
-
---
-
 // Created at
 
 :filtered-data: of the orders
@@ -717,8 +636,8 @@ include::partial$created-at.adoc[]
 .Comparison operators available for this filter
 --
 
-:filter-ending: selected dates
-:filter: selected dates
+:filter-ending: dates selected
+:filter: dates selected
 :commas:
 
 [[table-key-figures-operators-created-at]]
@@ -742,103 +661,6 @@ include::partial$less-than.adoc[]
 
 --
 
-// Paid at
-
-include::partial$paid-at.adoc[]
-
-[.collapseBox]
-.Comparison operators available for this filter
---
-
-:filter-ending: selected dates
-:filter: selected dates
-:commas:
-
-[[table-key-figures-operators-paid-at]]
-[cols="1,1,3"]
-|====
-| Comparison operator | Symbol | Explanation
-
-include::partial$is-equal-to.adoc[]
-
-include::partial$is-between.adoc[]
-
-include::partial$greater-than-or-equal-to.adoc[]
-
-include::partial$less-than-or-equal-to.adoc[]
-
-include::partial$greater-than.adoc[]
-
-include::partial$less-than.adoc[]
-
-|====
-
---
-
-// Date of outgoing items
-
-include::partial$date-outgoing-items.adoc[]
-
-[.collapseBox]
-.Comparison operators available for this filter
---
-
-:filter-ending: selected dates
-:filter: selected dates
-:commas:
-
-[[table-key-figures-operators-items-booked-at]]
-[cols="1,1,3"]
-|====
-| Comparison operator | Symbol | Explanation
-
-include::partial$is-equal-to.adoc[]
-
-include::partial$is-between.adoc[]
-
-include::partial$greater-than-or-equal-to.adoc[]
-
-include::partial$less-than-or-equal-to.adoc[]
-
-include::partial$greater-than.adoc[]
-
-include::partial$less-than.adoc[]
-
-|====
-
---
-
-// Payment method
-
-include::partial$payment-method.adoc[]
-
-[.collapseBox]
-.Comparison operators available for this filter
---
-
-:filter-ending: selected payment methods (icon:check-square[role="blue"])
-
-
-:filter: selected payment methods (icon:check-square[role="blue"])
-:commas:
-
-[[table-key-figures-operators-payment-method]]
-[cols="1,1,3"]
-|====
-| Comparison operator | Symbol | Explanation
-
-include::partial$corresponds-to-one-of-these-values.adoc[]
-
-include::partial$corresponds-to-none-of-these-values.adoc[]
-
-include::partial$is-equal-to.adoc[]
-
-include::partial$is-not-equal.adoc[]
-
-|====
-
---
-
 // Manufacturer
 
 include::partial$manufacturer.adoc[]
@@ -849,42 +671,11 @@ include::partial$manufacturer.adoc[]
 
 
 
-:filter: selected manufacturers (icon:check-square[role="blue"])
-:filter-ending: selected manufacturers (icon:check-square[role="blue"])
+:filter: selected manufacturers (material:check_box[role=skyBlue])
+:filter-ending: selected manufacturers (material:check_box[role=skyBlue])
 :commas:
 
 [[table-key-figures-operators-producer]]
-[cols="1,1,3"]
-|====
-| Comparison operator | Symbol | Explanation
-
-include::partial$corresponds-to-one-of-these-values.adoc[]
-
-include::partial$corresponds-to-none-of-these-values.adoc[]
-
-include::partial$is-equal-to.adoc[]
-
-include::partial$is-not-equal.adoc[]
-
-|====
-
---
-
-// Return reason
-
-include::partial$return-reason.adoc[]
-
-[.collapseBox]
-.Comparison operators available for this filter
---
-
-
-
-:filter: selected return reasons (icon:check-square[role="blue"])
-:filter-ending: selected return reasons (icon:check-square[role="blue"])
-:commas:
-
-[[table-key-figures-operators-returnreason]]
 [cols="1,1,3"]
 |====
 | Comparison operator | Symbol | Explanation
@@ -926,6 +717,398 @@ include::partial$is-not-equal.adoc[]
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
 include::partial$corresponds-to-none-of-these-values.adoc[]
+|====
+
+--
+
+Warehouse
+
+include::partial$warehouse.adoc[]
+
+[.collapseBox]
+.Comparison operators available for this filter
+--
+
+
+
+:filter: selected warehouses (material:check_box[role=skyBlue])
+:commas:
+
+[[table-key-figures-operators-warehouse]]
+[cols="1,1,3"]
+|====
+| Comparison operator | Symbol | Explanation
+
+include::partial$corresponds-to-one-of-these-values.adoc[]
+
+include::partial$corresponds-to-none-of-these-values.adoc[]
+
+|====
+
+--
+
+// Delivery country
+
+include::partial$delivery-country.adoc[]
+
+[.collapseBox]
+.Comparison operators available for this filter
+--
+
+:filter-ending: selected countries of delivery (material:check_box[role=skyBlue])
+
+
+:filter: selected countries of delivery (material:check_box[role=skyBlue])
+:commas:
+
+[[table-key-figures-operators-delivery-countries]]
+[cols="1,1,3"]
+|====
+| Comparison operator | Symbol | Explanation
+
+include::partial$is-equal-to.adoc[]
+
+include::partial$is-not-equal.adoc[]
+
+include::partial$corresponds-to-one-of-these-values.adoc[]
+
+include::partial$corresponds-to-none-of-these-values.adoc[]
+
+|====
+
+--
+
+// Client
+
+include::partial$client.adoc[]
+
+[.collapseBox]
+.Comparison operators available for this filter
+--
+
+
+
+:filter: selected clients (material:check_box[role=skyBlue])
+:commas:
+
+[[table-key-figures-operators-client]]
+[cols="1,1,3"]
+|====
+| Comparison operator | Symbol | Explanation
+
+include::partial$corresponds-to-one-of-these-values.adoc[]
+
+include::partial$corresponds-to-none-of-these-values.adoc[]
+
+|====
+
+--
+
+// Invoice country
+
+include::partial$invoice-country.adoc[]
+
+[.collapseBox]
+.Comparison operators available for this filter
+--
+
+:filter-ending: selected invoice countries (material:check_box[role=skyBlue])
+
+
+:filter: selected invoice countries (material:check_box[role=skyBlue])
+:commas:
+
+[[table-key-figures-operators-invoice-countries]]
+[cols="1,1,3"]
+|====
+| Comparison operator | Symbol | Explanation
+
+include::partial$is-equal-to.adoc[]
+
+include::partial$is-not-equal.adoc[]
+
+include::partial$corresponds-to-one-of-these-values.adoc[]
+
+include::partial$corresponds-to-none-of-these-values.adoc[]
+
+|====
+
+--
+
+// Return reason
+
+include::partial$return-reason.adoc[]
+
+[.collapseBox]
+.Comparison operators available for this filter
+--
+
+
+
+:filter: selected return reasons (material:check_box[role=skyBlue])
+:filter-ending: selected return reasons (material:check_box[role=skyBlue])
+:commas:
+
+[[table-key-figures-operators-returnreason]]
+[cols="1,1,3"]
+|====
+| Comparison operator | Symbol | Explanation
+
+include::partial$corresponds-to-one-of-these-values.adoc[]
+
+include::partial$corresponds-to-none-of-these-values.adoc[]
+
+include::partial$is-equal-to.adoc[]
+
+include::partial$is-not-equal.adoc[]
+
+|====
+
+--
+
+// Order property type
+
+include::partial$order-property-type.adoc[]
+
+[.collapseBox]
+.Comparison operators available for this filter
+--
+
+:filter-ending: selected types (material:check_box[role=skyBlue])
+
+
+:filter: selected types (material:check_box[role=skyBlue])
+:commas:
+
+[[table-key-figures-operators-order-property-type]]
+[cols="1,1,3"]
+|====
+| Comparison operator | Symbol | Explanation
+
+include::partial$is-equal-to.adoc[]
+
+include::partial$is-not-equal.adoc[]
+
+include::partial$corresponds-to-one-of-these-values.adoc[]
+
+include::partial$corresponds-to-none-of-these-values.adoc[]
+
+|====
+
+--
+
+// Variation ID
+
+include::partial$variation-id.adoc[]
+
+[.collapseBox]
+.Relational operators for this filter
+--
+
+[[table-key-figures-operators-variation-id]]
+[cols="1,1,3"]
+|====
+| Comparison operator | Operator | Explanation
+
+include::partial$is-equal-to.adoc[]
+
+include::partial$is-not-equal.adoc[]
+
+include::partial$corresponds-to-one-of-these-values.adoc[]
+
+include::partial$corresponds-to-none-of-these-values.adoc[]
+
+|====
+
+--
+
+// Shipping provider
+
+include::partial$shipping-provider.adoc[]
+
+[.collapseBox]
+.Comparison operators available for this filter
+--
+
+
+
+:filter: selected shipping service providers (material:check_box[role=skyBlue])
+:commas:
+
+[[table-key-figures-operators-shipping-provider]]
+[cols="1,1,3"]
+|====
+| Comparison operator | Symbol | Explanation
+
+include::partial$corresponds-to-one-of-these-values.adoc[]
+
+include::partial$corresponds-to-none-of-these-values.adoc[]
+
+|====
+
+--
+
+// Shipping profile
+
+include::partial$shipping-profile.adoc[]
+
+[.collapseBox]
+.Comparison operators available for this filter
+--
+
+
+
+:filter: selected shipping profiles (material:check_box[role=skyBlue])
+:commas:
+
+[[table-key-figures-operators-shipping-profile]]
+[cols="1,1,3"]
+|====
+| Comparison operator | Symbol | Explanation
+
+include::partial$corresponds-to-one-of-these-values.adoc[]
+
+include::partial$corresponds-to-none-of-these-values.adoc[]
+
+|====
+
+--
+
+// Outgoing items booked
+
+include::partial$outgoing-items-booked.adoc[]
+
+[.collapseBox]
+.Comparison operators available for this filter
+--
+
+:filter-ending: selected values (material:check_box[role=skyBlue])
+:commas:
+
+[[table-key-figures-operators-outgoing-items-booked]]
+[cols="1,1,3"]
+|====
+| Comparison operator | Symbol | Explanation
+
+include::partial$is-equal-to.adoc[]
+
+|====
+
+--
+
+// Date of outgoing items
+
+include::partial$date-outgoing-items.adoc[]
+
+[.collapseBox]
+.Comparison operators available for this filter
+--
+
+:filter-ending: dates selected
+:filter: dates selected
+:commas:
+
+[[table-key-figures-operators-items-booked-at]]
+[cols="1,1,3"]
+|====
+| Comparison operator | Symbol | Explanation
+
+include::partial$is-equal-to.adoc[]
+
+include::partial$is-between.adoc[]
+
+include::partial$greater-than-or-equal-to.adoc[]
+
+include::partial$less-than-or-equal-to.adoc[]
+
+include::partial$greater-than.adoc[]
+
+include::partial$less-than.adoc[]
+
+|====
+
+--
+
+// Order property value
+
+include::partial$order-property-value.adoc[]
+
+[.collapseBox]
+.Comparison operators available for this filter
+--
+
+:filter-ending: entered values
+
+
+:filter: entered values
+:commas:
+
+[[table-key-figures-operators-order-property-value]]
+[cols="1,1,3"]
+|====
+| Comparison operator | Symbol | Explanation
+
+include::partial$is-equal-to.adoc[]
+
+include::partial$is-not-equal.adoc[]
+
+include::partial$corresponds-to-one-of-these-values.adoc[]
+
+include::partial$corresponds-to-none-of-these-values.adoc[]
+
+|====
+
+--
+
+// Payment method
+
+include::partial$payment-method.adoc[]
+
+[.collapseBox]
+.Comparison operators available for this filter
+--
+
+:filter-ending: selected payment methods (material:check_box[role=skyBlue])
+
+
+:filter: selected payment methods (material:check_box[role=skyBlue])
+:commas:
+
+[[table-key-figures-operators-payment-method]]
+[cols="1,1,3"]
+|====
+| Comparison operator | Symbol | Explanation
+
+include::partial$corresponds-to-one-of-these-values.adoc[]
+
+include::partial$corresponds-to-none-of-these-values.adoc[]
+
+include::partial$is-equal-to.adoc[]
+
+include::partial$is-not-equal.adoc[]
+
+|====
+
+--
+
+// Payment status
+
+include::partial$payment-status.adoc[]
+
+[.collapseBox]
+.Comparison operators available for this filter
+--
+
+:filter-ending: selected values (material:check_box[role=skyBlue])
+:commas:
+
+[[table-key-figures-operators-payment-status]]
+[cols="1,1,3"]
+|====
+| Comparison operator | Symbol | Explanation
+
+include::partial$is-equal-to.adoc[]
+
 |====
 
 --
