FIX broken links

--- a/docs/de-de/modules/crm/pages/vorbereitende-einstellungen.adoc
+++ b/docs/de-de/modules/crm/pages/vorbereitende-einstellungen.adoc
@@ -518,7 +518,7 @@ Mit der Rabattart *Rabatt auf Zahlungsart* gewährst du deinen Kontakten einen R
 [TIP]
 .Rabatt auf Zahlungsart direkt hinterlegen
 ====
-Alternativ zu der Einstellung, die du in diesem Menü vornimmst, ist es möglich, direkt bei einer Zahlungsart einen globalen Rabatt für diese Zahlungsart zu hinterlegen. Ein Beispiel ist ein prozentualer Rabatt bei der Zahlungsart *Vorkasse*. Beachte dazu die Handbuchseite xref:payment:zahlungsarten-verwalten.adoc#20[Zahlungsarten verwalten]. Die Einstellung direkt bei der Zahlungsart erlaubt jedoch keine detaillierteren Einstellungen als bei der Option *Rabatt auf Zahlungsart* im Menü *Einrichtung » CRM » Kundenklassen*.
+Alternativ zu der Einstellung, die du in diesem Menü vornimmst, ist es möglich, direkt bei einer Zahlungsart einen globalen Rabatt für diese Zahlungsart zu hinterlegen. Ein Beispiel ist ein prozentualer Rabatt bei der Zahlungsart *Vorkasse*. Beachte dazu die Handbuchseite xref:payment:zahlungsarten-verwalten.adoc#[Zahlungsarten verwalten]. Die Einstellung direkt bei der Zahlungsart erlaubt jedoch keine detaillierteren Einstellungen als bei der Option *Rabatt auf Zahlungsart* im Menü *Einrichtung » CRM » Kundenklassen*.
 ====
 
 Gehe wie im Folgenden beschrieben vor, um einen Rabatt auf eine oder mehrere Zahlungsarten einzurichten.
