--- a/docs/en-gb/modules/crm/pages/emailbuilder.adoc
+++ b/docs/en-gb/modules/crm/pages/emailbuilder.adoc
@@ -895,7 +895,7 @@ The available variables for the EmailBuilder are grouped into the following cate
 ** <<#variables-order-invoice-address, Invoice address>>
 ** <<#variables-order-order-items, Order items (only for item list widget)>>
 ** <<#variables-order-shipping, Shipping>>
-** <<#variables-subscription, Subscription>>
+** <<#variables-order-subscription, Subscription>>
 
 * <<#variables-contact-general, Contact>>
 
@@ -1566,7 +1566,7 @@ The QR code is shown as an URL in the email of your customers. After clicking on
 
 |====
 
-[#variablen-order-subscription]
+[#variables-order-subscription]
 ==== Variables: Order / Subscription
 
 [[table-variables-order-subscription]]
