--- a/docs/en-gb/modules/orders/pages/coupons.adoc
+++ b/docs/en-gb/modules/orders/pages/coupons.adoc
@@ -173,7 +173,7 @@ Activate the option *incl. shipping costs* if the shipping costs should be inclu
 2+^| *Filter*
 
 | *Items coming from price comparison portals*
-| *Allow* = Allow whether coupons can also be redeemed for items coming from xref:markets:markets.adoc#[price search engines], i.e. items that are also offered on other marketplaces.  +
+| *Allow* = Allow whether coupons can also be redeemed for items coming from xref:markets:markets.adoc#_using_price_search_engines[price search engines], i.e. items that are also offered on other marketplaces.  +
 *Do not allow* = Coupons cannot be used for items coming from price comparison portals (default setting). +
 *_Note:_* Price comparison portals are all referrers > 1. This means that besides price comparison portals, also marketplaces and platforms are included. The referrers *Manual entry* (referrer ID 0) and *Online shop* (referrer ID 1) are not affected by these settings.
 
