--- a/docs/en-gb/modules/payment/pages/payone.adoc
+++ b/docs/en-gb/modules/payment/pages/payone.adoc
@@ -113,7 +113,7 @@ Adapting the ShopBuilder for the checkout:
 . Select all the needed address fields for *Display input fields for invoice and delivery address*.
 . *Save* (icon:save[role="green"]) the settings.
 
-You can find additional information about the <</webshop/shop-builder#, ShopBuilder>> in general as well as the widget category xref:webshop:shop-builder.adoc#85[Customer data] in the Online store section of the manual.
+You can find additional information about the xref:online-store:shop-builder.adoc#[ShopBuilder] in general as well as the widget category xref:online-store:shop-builder.adoc#85[Customer data] in the Online store section of the manual.
 
 --
 
