--- a/docs/de-de/modules/crm/pages/kontakte-verwalten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakte-verwalten.adoc
@@ -284,7 +284,7 @@ Mit der Rabattart *Rabatt auf Zahlungsart* gewährst du deinen Kontakten einen R
 [TIP]
 .Rabatt auf Zahlungsart direkt hinterlegen
 ====
-Alternativ zu der Einstellung, die du in diesem Menü vornimmst, ist es möglich, direkt bei einer Zahlungsart einen globalen Rabatt für diese Zahlungsart zu hinterlegen. Ein Beispiel ist ein prozentualer Rabatt bei der Zahlungsart *Vorkasse*. Beachte dazu die Handbuchseite xref:payment:zahlungsarten-verwalten.adoc#20[Zahlungsarten verwalten]. Die Einstellung direkt bei der Zahlungsart erlaubt jedoch keine detaillierteren Einstellungen als bei der Option *Rabatt auf Zahlungsart* im Menü *Einrichtung » CRM » Kundenklassen*.
+Alternativ zu der Einstellung, die du in diesem Menü vornimmst, ist es möglich, direkt bei einer Zahlungsart einen globalen Rabatt für diese Zahlungsart zu hinterlegen. Ein Beispiel ist ein prozentualer Rabatt bei der Zahlungsart *Vorkasse*. Beachte dazu die Handbuchseite xref:payment:zahlungsarten-verwalten.adoc#[Zahlungsarten verwalten]. Die Einstellung direkt bei der Zahlungsart erlaubt jedoch keine detaillierteren Einstellungen als bei der Option *Rabatt auf Zahlungsart* im Menü *Einrichtung » CRM » Kundenklassen*.
 ====
 
 Gehe wie im Folgenden beschrieben vor, um einen Rabatt auf eine oder mehrere Zahlungsarten einzurichten.
@@ -2322,7 +2322,7 @@ Kostenstelle erstellen:
 [#3300]
 == Statistik erstellen
 
-Im Bereich *Statistik* erstellst du kontaktspezifische Statistiken. Damit kannst du bestimmte Daten speziell für diesen Kontakt auswerten und als Statistik anzeigen, z.B. den Gesamtumsatzverlauf des Kontakts in einem bestimmten Zeitraum. Bestehende Statistiken kannst du in diesem Bereich auch bearbeiten. Weitere Informationen findest du im Kapitel xref:business-entscheidungen:statistiken.adoc#70[Kundenstatistiken].
+Im Bereich *Statistik* erstellst du kontaktspezifische Statistiken. Damit kannst du bestimmte Daten speziell für diesen Kontakt auswerten und als Statistik anzeigen, z.B. den Gesamtumsatzverlauf des Kontakts in einem bestimmten Zeitraum. Bestehende Statistiken kannst du in diesem Bereich auch bearbeiten. Weitere Informationen findest du im Kapitel xref:daten:statistiken.adoc#70[Kundenstatistiken].
 
 [.instruction]
 Statistik erstellen:
@@ -2343,13 +2343,13 @@ Statistik erstellen:
 . *Speichere* (icon:save[role="green"]) die Einstellungen. +
 → Die Daten werden geladen und angezeigt.
 
-Je nachdem, welchen Statistiktyp du gewählt hast, findest du weitere Informationen in den folgenden Kapiteln der Handbuchseite xref:business-entscheidungen:statistiken.adoc#[Statistiken verwalten]:
+Je nachdem, welchen Statistiktyp du gewählt hast, findest du weitere Informationen in den folgenden Kapiteln der Handbuchseite xref:daten:statistiken.adoc#[Statistiken verwalten]:
 
-* xref:business-entscheidungen:statistiken.adoc#20[Gesamtumsatzverlauf]
-* xref:business-entscheidungen:statistiken.adoc#100[Umsatz nach Kategorie]
-* xref:business-entscheidungen:statistiken.adoc#20[Umsatz nach Herkunft pro Auftrag]
+* xref:daten:statistiken.adoc#20[Gesamtumsatzverlauf]
+* xref:daten:statistiken.adoc#100[Umsatz nach Kategorie]
+* xref:daten:statistiken.adoc#20[Umsatz nach Herkunft pro Auftrag]
 
-Allgemeine Informationen, wie du z.B. Statistiken bearbeitest, findest du auf der Handbuchseite xref:business-entscheidungen:statistiken.adoc#[Statistiken verwalten].
+Allgemeine Informationen, wie du z.B. Statistiken bearbeitest, findest du auf der Handbuchseite xref:daten:statistiken.adoc#[Statistiken verwalten].
 
 
 [#5100]
