--- a/docs/en-gb/modules/payment/pages/managing-bank-details.adoc
+++ b/docs/en-gb/modules/payment/pages/managing-bank-details.adoc
@@ -4,7 +4,7 @@
 :keywords: bank, bank details, bank data, EBICS, SEPA, SEPA direct debit mandate, debit, bank information, account, bank account, account holder, account number, bank code, IBAN, BIC, direct debit mandate, debit order, debit advice mandate, payments details, EBICS account, interim transaction report, business account, Provision of bank statements, 
 :author: team-fulfillment-payment
 
-On this page of the manual, you learn how to save your <<#own-bank-details, own bank details>> and <<#bank-details-customer, your customers’ bank details>> as well as how to set up <<#69, EBICS>> and <<#220, SEPA>>.
+On this page of the manual, you learn how to save your <<#own-bank-details, own bank details>> and <<#bank-details-customer, your customers’ bank details>> as well as how to set up <<#ebics, EBICS>> and <<#220, SEPA>>.
 
 [#own-bank-details]
 == Saving own bank details
