--- a/docs/en-gb/modules/crm/pages/managing-contacts.adoc
+++ b/docs/en-gb/modules/crm/pages/managing-contacts.adoc
@@ -137,7 +137,7 @@ Creating a customer class:
 The terms of payment are saved in the xref:orders:managing-orders.adoc#intable-payment-terms-order[order settings]. The values in the contact data record have also priority over the values in the order settings. The values can be manually adjusted or entered in the order if no values are saved in the contact data record or in the customer class. The terms of payment saved in the order are then shown on the xref:orders:order-documents.adoc#intable-payment-terms-documents[documents]. Pay attention to the expandable box *Example:{nbsp}terms of payment* below <<#table-edit-contact>> in the xref:crm:managing-contacts.adoc#300[Editing a contact] chapter. You can find an example regarding the terms of payment there.
 
 |[#intable-customer-class-customer-id]*Customer ID*
-|Enter the ID of the contact who should receive the multi-invoices that are created from <<orders/managing-orders#800#, multi-orders>>. Multi-orders are generated for this customer class and the invoice is sent to that contact.
+|Enter the ID of the contact who should receive the multi-invoices that are created from xref:orders:managing-orders.adoc#800[multi-orders]. Multi-orders are generated for this customer class and the invoice is sent to that contact.
 
 |[#intable-customer-class-discount-type]*Discount type*
 |Select the discount type. The number of options that are visible depends on which discount type was selected. If you do no want to offer a discount, select the option *No discount*. Further information and explanations about the discount types in plentymarkets can be found in the xref:crm:managing-contacts.adoc#25[Using the discount system] chapter.
@@ -283,7 +283,7 @@ With the discount type *Discount based on the method of payment* you offer custo
 [TIP]
 .Directly saving a discount based on the method of payment
 ====
-Instead of configuring the settings in this menu, it is also possible to directly save a global discount for a payment method. An example is a discount in percent for the payment method *Cash in advance*. For further information, refer to the xref:payment:managing-payment-methods.adoc#20[Managing payment methods] page of the manual. You are not able to completely customise the settings if you save a discount directly for a payment method. It is only possible to completely customise the settings when using the option *Discount based on the method of payment* in the *Setup » CRM » Customer classes* menu.
+Instead of configuring the settings in this menu, it is also possible to directly save a global discount for a payment method. An example is a discount in percent for the payment method *Cash in advance*. For further information, refer to the xref:payment:managing-payment-methods.adoc#[Managing payment methods] page of the manual. You are not able to completely customise the settings if you save a discount directly for a payment method. It is only possible to completely customise the settings when using the option *Discount based on the method of payment* in the *Setup » CRM » Customer classes* menu.
 ====
 
 Proceed as described below to set up a discount based on one or more payment methods.
