--- a/docs/en-gb/modules/crm/pages/practical-examples.adoc
+++ b/docs/en-gb/modules/crm/pages/practical-examples.adoc
@@ -2,3 +2,7 @@
 :keywords: practical examples crm
 :description: In this area, you can find practical examples for the CRM area.
 :author: team-crm
+
+In this area, you can find practical examples for the CRM area. The list of practical examples is continuously being updated:
+
+* xref:crm:practical-example-sen-tracking-url.adoc#[Sending tracking URLs to customers]
