update quick search page

--- a/docs/de-de/modules/crm/pages/kontakte-verwalten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakte-verwalten.adoc
@@ -529,7 +529,7 @@ Weitere Informationen zum nachträglichen Verknüpfen des Kontakts mit einer Fir
 
 Im Bereich *Filter* hast du die Möglichkeit, Kontakte nach bestimmten Kriterien zu suchen. Die gefundenen Kontakte werden dann im Bereich *Übersicht* angezeigt. In der Übersicht werden aktuell die folgenden Informationen angezeigt: ID, Gast, Aktionen (icon:bars[]), Firma, Bewertung, Vorname, Nachname, E-Mail-Adresse, Telefonnummer, Kundenklasse, Anzahl der Aufträge, Postleitzahl und Land. Wie du Kontaktdaten bearbeitest, ist im Kapitel xref:crm:kontakte-verwalten.adoc#300[Kontakt bearbeiten] beschrieben.
 
-Du hast auch die Möglichkeit, alle gespeicherten Daten eines Kontakts inklusive Nachrichten, Aufträgen, Nachrichten und Tickets über die Schnellsuche anzuzeigen. Wie du dazu vorgehst, ist auf der Handbuchseite xref:crm:schnellsuche.adoc#[Schnellsuche] im Kapitel xref:crm:schnellsuche.adoc#datensaetze-finden[Datensätze über die Schnellsuche finden] beschrieben.
+Du hast auch die Möglichkeit, alle gespeicherten Daten eines Kontakts inklusive Nachrichten, Aufträgen, Nachrichten und Tickets über die Schnellsuche anzuzeigen. Wie du dazu vorgehst, ist auf der Handbuchseite xref:crm:schnellsuche.adoc#[Schnellsuche] im Kapitel xref:crm:schnellsuche.adoc#datensatz-suchen[Datensatz suchen] beschrieben.
 
 [TIP]
 .E-Mails direkt aus der Übersicht heraus versenden
