--- a/docs/de-de/modules/crm/pages/schnellsuche.adoc
+++ b/docs/de-de/modules/crm/pages/schnellsuche.adoc
@@ -24,32 +24,22 @@ include::_includes:partial$rights.adoc[]
 
 Weitere Informationen zu den Rechten für das Menü *CRM » Kontakte* für Backend-Benutzer:innen findest du auf der Handbuchseite xref:crm:vorbereitende-einstellungen.adoc#rechte-vergeben[Vorbereitende Einstellungen vornehmen].
 
-[#datensaetze-finden]
-== Datensätze über die Schnellsuche finden
+[#datensatz-suchen]
+== Datensatz suchen
 
 Gehe wie im Folgenden beschrieben vor, um Datensätze über die Schnellsuche zu finden.
 
 [.instruction]
-Datensätze über die Schnellsuche finden:
+Datensatz über die Schnellsuche suchen:
 
 . Öffne das Menü *CRM » Schnellsuche*.
-. Wähle mindestens einen Filter. Beachte dazu die Erläuterungen in <<#table-filter-quick-search>>.
-. Klicke auf *Suchen* (icon:search[role="blue"]). +
-→ Die Datensätze, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
-. Klicke in die Zeile des Datensatzes. +
-→ Die Übersicht mit den Bereichen *Rechnungsadresse*, *Stammdaten* und *Info* wird geöffnet.
-. Klicke in die Zeile *Aufträge*, um die Aufträge anzuzeigen. +
-→ Mit einem Klick in die Zeile des Auftrags gelangst du direkt in die Übersicht des Auftrags im Menü *Aufträge » Aufträge bearbeiten*.
-. Klicke in die Zeile *Adressen*, um weitere Adressen anzuzeigen. +
-→ Mit einem Klick in die Zeile der Adresse gelangst du direkt in die Adressübersicht und kannst dort Änderungen vornehmen.
-. Klicke in die Zeile *Messenger*, um die Nachrichten anzuzeigen. +
-→ Klicke auf *Neue Nachricht* (material:add[]). Die Stoppuhr oben rechts startet automatisch, sobald die Nachricht geöffnet wird. Klicke neben dem Feld *Minuten* auf *Kostenpflichtig* (material:toggle_off[] terra:pay_cash[]), um die Zeit abzurechnen. +
-*_Hinweis:_* Weitere Informationen findest du auf der Handbuchseite xref:crm:messenger.adoc#[Messenger].
-. Klicke in die Zeile *Events*, um neue Events hinzuzufügen oder bestehende Events zu bearbeiten. +
-→ Klicke auf *Event hinzufügen* (material:add[]), um diese Zeit zu speichern. +
-→ *_Hinweis:_* Events sind nur für Kontaktdatensätze verfügbar, _nicht_ für Gastbestellungen.
-. Klicke in die Zeile *Tickets*, um die Tickets anzuzeigen. +
-→ Mit einem Klick in die Zeile des Tickets gelangst du direkt in das Ticket im Menü *CRM » Ticketsystem*.
+* *_Möglichkeit 1:_* Klicke auf material:search[] (*Suchen*), um eine Liste aller Datensätze zu sehen. 
+* *_Möglichkeit 2:_* Gib einen Wert im Suchfeld ein und wähle dann den für dich passenden Filter aus der Vorschlagsliste. *_Beispiel:_* Wenn du eine Zahl eingibst, werden dir mögliche Filter mit dieser ID vorgeschlagen wie z.B. die Kontakt-ID.
+* *_Möglichkeit 3:_* Klicke auf material:tune[], um die Suchergebnisse mit Hilfe von Filtern einzugrenzen.
+. Beachte die Erläuterungen zu den Filtern in <<#table-search-contact>>.  +
+*_Tipp:_* Gib eine Kombination aus allen oder mehreren Werten und Optionen ein, um die Suche noch genauer einzugrenzen.
+. Klicke auf material:search[] *Suchen*. +
+→ Die Datensätze, die den eingestellten Suchkriterien entsprechen, werden in der Übersicht angezeigt. <<#table-settings-quick-search>> erläutert weitere Einstellungsmöglichkeiten im Datensatz.
 
 [[table-filter-quick-search]]
 .Filter in der Schnellsuche
@@ -57,15 +47,8 @@ Datensätze über die Schnellsuche finden:
 |====
 |Einstellung |Erläuterung
 
-| *Suchen*
-|Mit einem Klick auf icon:search[role="blue"] werden die gefundenen Datensätze, die den Suchkriterien entsprechen, angezeigt. +
-*_Hinweis:_* Mindestens ein Filter muss gewählt sein.
-
-| *Zurücksetzen*
-|Mit einem Klick auf icon:undo[role="orange"] werden die eingestellten Filterkriterien zurückgesetzt.
-
 | *ID*
-|Jeder Kontakt erhält automatisch eine fortlaufende und einzigartige ID. Dies ist unabhängig davon, ob der Kontakt manuell oder automatisch erstellt wurde. 2 Kontakte haben somit nie die selbe ID. Die ID entspricht immer einer echten Zahl. Ungültig sind daher z.B. 00521 oder ABC8354. +
+|Jeder Kontaktdatensatz erhält automatisch eine fortlaufende und einzigartige ID. Dies ist unabhängig davon, ob der Kontakt manuell oder automatisch erstellt wurde. 2 Kontakte haben somit nie die selbe ID. Die ID entspricht immer einer echten Zahl. Ungültig sind daher z.B. 00521 oder ABC8354. +
 *_Hinweis:_* Mit einem Klick auf die Pfeile (icon:sort[]) neben der ID in der Übersicht kannst du die gefundenen Datensätze aufsteigend oder absteigend nach ihrer ID anzeigen.
 
 | *Name*
@@ -76,7 +59,13 @@ Datensätze über die Schnellsuche finden:
 |In diesem Feld kannst du nach dem Namen, der Adresse, der Firma, der Kundennummer und dem eBay-Namen suchen. +
 *_Hinweis:_* Um nach dem eBay-Namen zu suchen, gib zuerst den Parameter `ebay:` gefolgt vom gesuchten eBay-Namen ein.
 
-| *Anschrift*
+| *E-Mail*
+|Gib die komplette E-Mail-Adresse ein, um den Kontakt mit dieser E-Mail-Adresse anzuzeigen.
+
+| *Telefon*
+|Gib die Telefonnummer ein, um nur den Kontakt mit dieser Telefonnummer anzuzeigen. Es kann auch nach Teilen der Telefonnummer gesucht werden. Du musst mindestens 3 Ziffern eingeben.
+
+| *Adresse*
 |Gib den Straßennamen und/oder die Hausnummer ein. Es ist möglich, nur nach Teilen des Straßennamens und Teilen der Hausnummer zu suchen.
 
 | *PLZ*
@@ -86,18 +75,12 @@ Datensätze über die Schnellsuche finden:
 | *Ort*
 |Ort, der im Kontakt gespeichert ist, eingeben. Es wird auch nach Orten, die in den Adressdatensätzen des Kontakts gespeichert sind, gesucht. Es ist möglich, nur nach Teilen des Ortsnamens zu suchen.
 
-| *E-Mail*
-|Gib die komplette E-Mail-Adresse ein, um den Kontakt mit dieser E-Mail-Adresse anzuzeigen.
-
-| *Telefon*
-|Gib die Telefonnummer ein, um nur den Kontakt mit dieser Telefonnummer anzuzeigen. Es kann auch nach Teilen der Telefonnummer gesucht werden. Du musst mindestens 3 Ziffern eingeben.
-
-| *Tags*
-|Wähle ein Tag, um nur Kontakte mit diesem Tag anzuzeigen.
-
 | *Land*
 |Wähle das Land, um nur Kontakte aus diesem Land anzuzeigen. Das Land ist in den Kontaktdaten gespeichert. +
 Wähle die Einstellung *Alle außer Deutschland*, um nur Kontakte aus allen Ländern außer Deutschland anzuzeigen.
+
+| *Tags*
+|Wähle ein Tag, um nur Kontakte mit diesem Tag anzuzeigen.
 
 | *Eigner*
 |Wähle den Eigner, um nur Kontakte anzuzeigen, die mit diesem Eigner verknüpft sind. Der Eigner muss in den Kontaktdaten gespeichert sein. +
@@ -106,25 +89,32 @@ Wähle die Einstellung *Alle außer Deutschland*, um nur Kontakte aus allen Län
 | *Typ*
 |Wähle den Typ, um nur Kontakte mit diesem Typ anzuzeigen.
 
-| *Kundenklasse*
-|Wähle die Kundenklasse, um nur Kontakte mit dieser Kundenklasse anzuzeigen.
-
 | *Bewertung*
 |Wähle die Bewertung, um nur Kontakte mit dieser Bewertung anzuzeigen. 5 gelbe Sterne stehen für die beste und 5 rote Sterne für die schlechteste Bewertung.
+
+| *Kundenklasse*
+|Wähle die Kundenklasse, um nur Kontakte mit dieser Kundenklasse anzuzeigen.
 
 | *Mandant*
 |Wähle den Mandanten, um nur Kontakte dieses Mandanten anzuzeigen. Der Mandant ist in den Kontaktdaten gespeichert. +
 *_Wichtig:_* Backend-Benutzer:innen stehen nur Mandanten zur Auswahl, für die sie eine Berechtigung haben. Berechtigungen werden im Menü *Einrichtung » Einstellungen » Benutzer » Konten* im Tab xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#100[Berechtigungen] des Benutzer:innenkontos eingestellt.
+
+| material:replay[]
+|Setzt die gewählten Filterkriterien zurück.
+
+| material:search[] *SUCHEN*
+|Führt die Suche aus. Die gefundenen Datensätze werden in der Übersicht angezeigt. +
+*_Tipp:_* Setze keine Filter, wenn du alle Datensätze in der Übersicht sehen möchtest.
 
 |====
 
 [TIP]
 Wenn du im Menü *CRM » Schnellsuche* einen Datensatz öffnest, kannst du mit einem Klick auf *Start* (material:play_circle[]) den Timer starten. Mit einem Klick auf *Pause* (material:pause_circle[]) hältst du den Timer an. Klicke auf *Zurücksetzen* (terra:reset[]), um die Zeit auf 0 zu setzen.
 
-[#weitere-einstellungen]
-== Weitere Einstellungsmöglichkeiten
+[#datensatz-bearbeiten]
+== Datensatz bearbeiten
 
-Wenn du einen Datensatz in der Schnellsuche öffnest, siehst du in der ersten Zeile des Datensatzes weitere Einstellungsmöglichkeiten, die in <<#table-settings-quick-search>> erläutert werden.
+Wenn du einen Datensatz in der Schnellsuche öffnest, siehst du in der ersten Zeile des Datensatzes weitere Bearbeitungsmöglichkeiten, die in <<#table-settings-quick-search>> erläutert werden.
 
 [[table-settings-quick-search]]
 .Einstellungen in der Schnellsuche
@@ -148,8 +138,9 @@ Mit einem Klick auf material:add[] *Neues Angebot* rechts neben *ANGEBOTE* wird 
 
 | *MESSENGER*
 |Öffnet weiter unten den Bereich *Messenger*. +
-Mit einem Klick auf material:add[] *Neue Nachricht* rechts neben *MESSENGER* öffnet sich weiter unten das Bearbeitungsfenster zum Erstellen einer neuen Nachricht. +
-*_Hinweis:_* Wenn es sich bei dem Datensatz um eine Gastbestellung handelt, sind diese Felder ausgegraut.
+Mit einem Klick auf material:add[] *Neue Nachricht* rechts neben *MESSENGER* öffnet sich weiter unten das Bearbeitungsfenster zum Erstellen einer neuen Nachricht. Die Stoppuhr oben rechts im Messenger-Bereich startet automatisch, sobald die neue Nachricht geöffnet wird. Klicke neben dem Feld *Minuten* auf *Kostenpflichtig* (material:toggle_off[] terra:pay_cash[]), um die Zeit abzurechnen. +
+*_Hinweis:_* Weitere Informationen findest du auf der Handbuchseite xref:crm:messenger.adoc#[Messenger].+
+*_Hinweis:_* Wenn es sich bei dem Datensatz um eine Gastbestellung handelt, sind die Felder *MESSENGER* und *Neue Nachricht* ausgegraut.
 
 | *TICKETS*
 |Öffnet das Menü *CRM » Ticketsystem*. Als Filter ist die ID des Kontakts automatisch gewählt. +
@@ -200,15 +191,19 @@ Wenn in der Adresse zusätzlich ein Firmenname enthalten ist, wird beim Umwandel
 plentyShop- und Marktplatz-Gastbestellung in Kontaktdatensatz umwandeln:
 
 . Öffne das Menü *CRM » Schnellsuche*.
-. Wähle mindestens einen Filter. Beachte dazu die Erläuterungen in <<#table-filter-quick-search>>.
-. Klicke auf *Suchen* (icon:search[role="blue"]). +
-→ Die Datensätze, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
+* *_Möglichkeit 1:_* Klicke auf material:search[] (*Suchen*), um eine Liste aller Datensätze zu sehen. 
+* *_Möglichkeit 2:_* Gib einen Wert im Suchfeld ein und wähle dann den für dich passenden Filter aus der Vorschlagsliste.
+* *_Möglichkeit 3:_* Klicke auf material:tune[], um die Suchergebnisse mit Hilfe von Filtern einzugrenzen.
+. Beachte die Erläuterungen zu den Filtern in <<#table-search-contact>>.  +
+*_Tipp:_* Gib eine Kombination aus allen oder mehreren Werten und Optionen ein, um die Suche noch genauer einzugrenzen.
+. Klicke auf material:search[] *Suchen*. +
+→ Die Datensätze, die den eingestellten Suchkriterien entsprechen, werden in der Übersicht angezeigt. 
 . Klicke in die Zeile des Datensatzes. +
 → Der Datensatz wird geöffnet.
-. Klicke in der Kopfzeile auf *Gast in Kontakt umwandeln* (material:swap_horiz[]). +
+. Klicke in der oberen Zeile auf *Gast in Kontakt umwandeln* (material:swap_horiz[]). +
 → Ein Fenster mit einer Sicherheitsabfrage wird angezeigt. +
 . Wenn du DSGVO-konform gearbeitet hast, klicke auf *Umwandeln*. +
-→ Der Datensatz wird in einen Kontaktdatensatz umgewandelt und erhält automatisch die nächste freie Kontakt-ID. Im Bereich *Historie* des Kontaktdatensatzes wird der Eintrag *Umgewandelt von* sowie der Name der Person, die den Datensatz umgewandelt hat, hinzugefügt.
+→ Der Datensatz der Gastbestellung wird in einen Kontaktdatensatz umgewandelt und erhält automatisch die nächste freie Kontakt-ID. Im Bereich *Historie* des Kontaktdatensatzes wird der Eintrag *Umgewandelt von* sowie der Name der Person, die den Datensatz umgewandelt hat, hinzugefügt.
 
 [TIP]
 .plentyShop-Gastbestellungen und Marktplatz-Gastbestellungen 
@@ -231,11 +226,15 @@ Im Menü *CRM » Schnellsuche* kannst du mit einem Klick alle zu einem Kontakt g
 Alle Daten zu einem Kontakt oder einer Gastbestellung herunterladen:
 
 . Öffne das Menü *CRM » Schnellsuche*.
-. Wähle mindestens einen Filter.
-. Klicke auf *Suchen* (icon:search[role="blue"]). +
-→ Die Datensätze, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
+* *_Möglichkeit 1:_* Klicke auf material:search[] (*Suchen*), um eine Liste aller Datensätze zu sehen. 
+* *_Möglichkeit 2:_* Gib einen Wert im Suchfeld ein und wähle dann den für dich passenden Filter aus der Vorschlagsliste.
+* *_Möglichkeit 3:_* Klicke auf material:tune[], um die Suchergebnisse mit Hilfe von Filtern einzugrenzen.
+. Beachte die Erläuterungen zu den Filtern in <<#table-search-contact>>.  +
+*_Tipp:_* Gib eine Kombination aus allen oder mehreren Werten und Optionen ein, um die Suche noch genauer einzugrenzen.
+. Klicke auf material:search[] *Suchen*. +
+→ Die Datensätze, die den eingestellten Suchkriterien entsprechen, werden in der Übersicht angezeigt. 
 . Klicke in die Zeile des Datensatzes. +
-→ Die Übersicht mit den Bereichen *Rechnungsadresse*, *Stammdaten* und *Info* wird geöffnet.
+→ Der Datensatz wird geöffnet.
 . Klicke in der oberen Zeile auf *Alle Daten dieses Kontakts herunterladen* (material:file_download[]). +
 → Ein Dialogfenster wird angezeigt. Lege den Speicherort für die ZIP-Datei auf deinem Computer fest.
 
@@ -253,11 +252,15 @@ Das Anonymisieren der Daten ist nur bei einem Kontaktdatensatz möglich, nicht b
 Datensatz anonymisieren:
 
 . Öffne das Menü *CRM » Schnellsuche*.
-. Wähle mindestens einen Filter.
-. Klicke auf *Suchen* (icon:search[role="blue"]). +
-→ Die Kontakte, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
-. Klicke in die Zeile des Kontakts. +
-→ Die Übersicht des Kontakts wird geöffnet.
+* *_Möglichkeit 1:_* Klicke auf material:search[] (*Suchen*), um eine Liste aller Datensätze zu sehen. 
+* *_Möglichkeit 2:_* Gib einen Wert im Suchfeld ein und wähle dann den für dich passenden Filter aus der Vorschlagsliste.
+* *_Möglichkeit 3:_* Klicke auf material:tune[], um die Suchergebnisse mit Hilfe von Filtern einzugrenzen.
+. Beachte die Erläuterungen zu den Filtern in <<#table-search-contact>>.  +
+*_Tipp:_* Gib eine Kombination aus allen oder mehreren Werten und Optionen ein, um die Suche noch genauer einzugrenzen.
+. Klicke auf material:search[] *Suchen*. +
+→ Die Datensätze, die den eingestellten Suchkriterien entsprechen, werden in der Übersicht angezeigt. 
+. Klicke in die Zeile des Datensatzes. +
+→ Der Datensatz wird geöffnet.
 . Klicke in der oberen Zeile auf *Datensatz anonymisieren* (icon:user-secret[]). +
 → Ein Fenster mit einer Sicherheitsabfrage wird angezeigt.
 . Gib die ID des Kontakts, den du anonymisieren möchten, ein.
