--- a/docs/de-de/modules/warenwirtschaft/pages/installation-und-ersteinrichtung.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/installation-und-ersteinrichtung.adoc
@@ -165,12 +165,6 @@ Allgemeine Einstellungen vornehmen:
 |image:warenwirtschaft:icon_plentybase.png[width=24, height=24]
 |Über diesen Menüpunkt richtest du die Verbindung zu xref:automatisierung:plentybase-installieren.adoc#[plentyBase] ein. Dies ist notwendig, wenn du über plentyWarehouse Etiketten für xref:warenwirtschaft:etiketten-drucken.adoc#[Artikel oder Lagerorte drucken] möchtest.
 
-| *Sprachausgabe*
-|image:warenwirtschaft:icon_speaker.png[width=24, height=24]
-|Aktiviere (icon:toggle-on[role="green"]) diese Option, um während der Nutzung der Funktionen von plentyWarehouse eine zusätzliche Sprachausgabe zu erhalten. Die Sprachausgabe enthält Warnungen, Anweisungen und Bestätigungshinweise. Je nach Ablauf und Anwendungsfall kann dies eine nützliche Hilfe für dein Lagerpersonal sein. +
-Über die Einstellung *Information zum Artikel* legst du je nach deinen Anforderungen fest, welche Artikelinformationen in der Sprachausgabe enthalten sein sollen. Wenn du diese Einstellung nicht anpasst, ist standardmäßig die Option *Variantenname* vorausgewählt. Wähle alternativ eine der Optionen *Artikelname*, *Variantenname* oder *Varianten-ID* aus. Sollen keine Artikelinformationen ausgegeben werden, wähle die Option *Keine Auswahl*. +
-*_Hinweis:_* Diese Einstellung greift für die Sprachausgabe aller Funktionen von plentyWarehouse.
-
 | [#intable-other-settings]*Sonstiges* 
 |material:settings[]
 |*Shortcut-Verhalten*: Bestimme, was geschieht, wenn du während der Nutzung einer Funktion auf einen der runden Buttons am rechten Bildschirmrand tippst. Durch diese Aktion gelangst du direkt in eine weitere Funktion und sparst dir damit einige Schritte. +
@@ -180,6 +174,41 @@ Allgemeine Einstellungen vornehmen:
 
 *Kamera des Geräts zum Scannen nutzen*: Verwendest du die plentyWarehouse App auf einem Android-Smartphone? Diese Einstellung erlaubt es dir, die eingebaute Kamera des Geräts zum Scannen von Barcodes und QR-Codes zu verwenden. Wenn diese Option aktiviert ist, wird bei der Verwendung von Funktionen, die das Scannen von Codes erfordern, am rechten oberen Bildschirmrand das Scanner-Symbol (image:warenwirtschaft:icon_barcode.png[width=24, height=24]) angezeigt. Tippe auf dieses Symbol, um die Kamera zu öffnen und den Scanvorgang zu starten.
 |===
+
+[#510]
+== Funktionen zur Sprachausgabe einrichten
+
+plentyWarehouse enthält eine Funktion zur Sprachausgabe. Das bedeutet, dass während der Nutzung von plentyWarehouse wichtige Informationen nicht nur auf dem Display, sondern auch über die Lautsprecher des Geräts ausgegeben werden. 
+
+Du kannst für jede Funktion flexibel einstellen, ob die Sprachausgabe aktiviert sein soll. Außerdem kannst du bestimmen, wie detailliert die Informationen in der Sprachausgabe sein sollen.
+
+[.instruction]
+Funktionen zur Sprachausgabe einrichten:
+
+. <<#300, Logge dich in plentyWarehouse ein>>.
+. Tippe auf das Menüsymbol (icon:bars[role="darkGrey"]) oben links.
+. Tippe unten auf *Einstellungen* (material:settings[]). +
+. Tippe auf *Sprachausgabe* (image:warenwirtschaft:icon_speaker.png[width=24, height=24]). +
+→ Das Einstellungsmenü öffnet sich.
+. Öffne die einzelnen Bereiche, um für jede Funktion genauere Einstellungen zur Sprachausgabe vorzunehmen. Beachte die Informationen in Beachte dazu die Erläuterungen in <<table-pw-tts-settings>>.
+
+[[table-pw-tts-settings]]
+.Funktionen zur Sprachausgabe in plentyWarehouse
+[cols="2,1,6"]
+|=== 
+
+|===
+
+
+////
+
+| *Sprachausgabe*
+|
+|Aktiviere (icon:toggle-on[role="green"]) diese Option, um während der Nutzung der Funktionen von plentyWarehouse eine zusätzliche Sprachausgabe zu erhalten. Die Sprachausgabe enthält Warnungen, Anweisungen und Bestätigungshinweise. Je nach Ablauf und Anwendungsfall kann dies eine nützliche Hilfe für dein Lagerpersonal sein. +
+Über die Einstellung *Information zum Artikel* legst du je nach deinen Anforderungen fest, welche Artikelinformationen in der Sprachausgabe enthalten sein sollen. Wenn du diese Einstellung nicht anpasst, ist standardmäßig die Option *Variantenname* vorausgewählt. Wähle alternativ eine der Optionen *Artikelname*, *Variantenname* oder *Varianten-ID* aus. Sollen keine Artikelinformationen ausgegeben werden, wähle die Option *Keine Auswahl*. +
+*_Hinweis:_* Diese Einstellung greift für die Sprachausgabe aller Funktionen von plentyWarehouse.
+
+////
 
 [#550]
 == App-Informationen einsehen
