add more info + examples DE

--- a/docs/de-de/modules/warenwirtschaft/pages/installation-und-ersteinrichtung.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/installation-und-ersteinrichtung.adoc
@@ -190,25 +190,29 @@ Funktionen zur Sprachausgabe einrichten:
 . Tippe unten auf *Einstellungen* (material:settings[]). +
 . Tippe auf *Sprachausgabe* (image:warenwirtschaft:icon_speaker.png[width=24, height=24]). +
 → Das Einstellungsmenü öffnet sich.
-. Öffne die einzelnen Bereiche, um für jede Funktion genauere Einstellungen zur Sprachausgabe vorzunehmen. Beachte die Informationen in Beachte dazu die Erläuterungen in <<table-pw-tts-settings>>.
+. Aktiviere (icon:toggle-on[role="green"]) die Option *Sprachausgabe*.
+. Öffne die einzelnen Bereiche (icon:chevron-right[role="darkGrey"]), um pro Funktion die gewünschten Einstellungen vorzunehmen. Beachte dazu die Erläuterungen in <<table-pw-tts-settings>>.
 
 [[table-pw-tts-settings]]
 .Funktionen zur Sprachausgabe in plentyWarehouse
-[cols="2,1,6"]
-|=== 
+[cols="1,3"]
+|====
+| *Information zum Artikel*
+|Welche Informationen zum Artikel soll die Sprachausgabe enthalten? Wähle aus, welche Information für dich und dein Lagerpersonal am Wichtigsten ist. Die Optionen *Varianten-ID*, *Variantenname* und *Variantennummer* stehen zur Auswahl. Sollen keine Artikelinformationen ausgegeben werden, wähle die Option *Keine Auswahl*.
 
-|===
+| *Bestätigung*
+| Wie detailliert sollen die Informationen sein, wenn über die Sprachausgabe eine Aktion bestätigt wird? +
+*Detailliert* = Die Bestätigung enthält so genaue Informationen wie möglich. *_Beispiel:_* Wurde ein Artikel erfolgreich umgebucht, enthält die Sprachausgabe Informationen zum Artikel sowie den Namen des Ziel- und Quellagerorts. +
+*Kurz* = Die Bestätigung wird kurz gehalten. *_Beispiel:_* Wurde ein Artikel erfolgreich umgebucht, werden Informationen zum Artikel sowie zu betroffenen Lagerorten nicht genannt. +
+*Aus* = Für die gewählte Funktion werden keine Bestätigungen über die Sprachausgabe ausgegeben.
 
+| *Anweisung*
+| Wie detailliet sollen die Informationen sein, wenn Benutzer:innen über die Sprachausgabe Anweisungen erhalten? +
+*Detailliert* = Die Anweisung enthält so genaue Informationen wie möglich. *_Beispiel:_* Während der rollenden Kommissionierung wird genau benannt, welcher Artikel von welchem Lagerort entnommen werden muss. +
+*Kurz* = Die Anweisung wird kurz gehalten. *_Beispiel:_* Während der rollenden Kommissionierung werden keine genaueren Informationen zum Artikel oder zu betroffenen Lagerorten genannt. +
+*Aus* = Für die gewählte Funktion werden keine Bestätigungen über die Sprachausgabe ausgegeben.
 
-////
-
-| *Sprachausgabe*
-|
-|Aktiviere (icon:toggle-on[role="green"]) diese Option, um während der Nutzung der Funktionen von plentyWarehouse eine zusätzliche Sprachausgabe zu erhalten. Die Sprachausgabe enthält Warnungen, Anweisungen und Bestätigungshinweise. Je nach Ablauf und Anwendungsfall kann dies eine nützliche Hilfe für dein Lagerpersonal sein. +
-Über die Einstellung *Information zum Artikel* legst du je nach deinen Anforderungen fest, welche Artikelinformationen in der Sprachausgabe enthalten sein sollen. Wenn du diese Einstellung nicht anpasst, ist standardmäßig die Option *Variantenname* vorausgewählt. Wähle alternativ eine der Optionen *Artikelname*, *Variantenname* oder *Varianten-ID* aus. Sollen keine Artikelinformationen ausgegeben werden, wähle die Option *Keine Auswahl*. +
-*_Hinweis:_* Diese Einstellung greift für die Sprachausgabe aller Funktionen von plentyWarehouse.
-
-////
+|====
 
 [#550]
 == App-Informationen einsehen
