add translation / change icon

--- a/docs/de-de/modules/warenwirtschaft/pages/installation-und-ersteinrichtung.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/installation-und-ersteinrichtung.adoc
@@ -191,7 +191,7 @@ Funktionen zur Sprachausgabe einrichten:
 . Tippe auf *Sprachausgabe* (image:warenwirtschaft:icon_speaker.png[width=24, height=24]). +
 → Das Einstellungsmenü öffnet sich.
 . Aktiviere (icon:toggle-on[role="green"]) die Option *Sprachausgabe*.
-. Öffne die einzelnen Bereiche (icon:chevron-right[role="darkGrey"]), um pro Funktion die gewünschten Einstellungen vorzunehmen. Beachte dazu die Erläuterungen in <<table-pw-tts-settings>>.
+. Öffne die einzelnen Bereiche (icon:chevron-down[role="darkGrey"]), um pro Funktion die gewünschten Einstellungen vorzunehmen. Beachte dazu die Erläuterungen in <<table-pw-tts-settings>>.
 
 [[table-pw-tts-settings]]
 .Funktionen zur Sprachausgabe in plentyWarehouse
