--- a/docs/de-de/modules/automatisierung/pages/best-practices.adoc
+++ b/docs/de-de/modules/automatisierung/pages/best-practices.adoc
@@ -14,7 +14,7 @@ Die hier verlinkten Beispielprozesse nehmen dir einige Arbeitsschritte ab und he
 [#100]
 == Grobkommissionierung über mobile Pickliste inkl. Label, Rechnung, Lieferschein und Warenausgang
 
-Das folgende Video erklärt, wie du mithilfe der Prozesse für bestimmte Aufträge automatisch eine mobile Pickliste erzeugst. Die Grob-Kommissionierung erfolgt mithilfe der <<#app, plentymarkets App>>. Das Beispiel liefert aktuell nur Aufträge, die aus einer Auftragsposition mit der Artikelmenge 1 bestehen. Wenn du also zuerst solche Aufträge bearbeiten möchtest und danach die komplexeren Aufträge, dann lege einfach zwei unterschiedliche Prozesse an. Importiere dieses Beispiel einfach noch einmal und passe die Filter entsprechend an.
+Das folgende Video erklärt, wie du mithilfe der Prozesse für bestimmte Aufträge automatisch eine mobile Pickliste erzeugst. Die Grob-Kommissionierung erfolgt mithilfe der xref:app:app.adoc#[plentymarkets App]. Das Beispiel liefert aktuell nur Aufträge, die aus einer Auftragsposition mit der Artikelmenge 1 bestehen. Wenn du also zuerst solche Aufträge bearbeiten möchtest und danach die komplexeren Aufträge, dann lege einfach zwei unterschiedliche Prozesse an. Importiere dieses Beispiel einfach noch einmal und passe die Filter entsprechend an.
 
 Schau dir das folgende Video an, um die einzelnen Einstellungen genauer nachzuvollziehen.
 link:https://cdn02.plentymarkets.com/pmsbpnokwu6a/frontend/plentyprocess/MPickL-Video_2021_04_26_16_33_56.plentyprocess[Lade zusätzlich den passenden Beispielprozess herunter^], um ihn anschließend in dein plentymarkets System zu importieren.
