--- a/docs/en-gb/modules/app/pages/mobile-box-picking.adoc
+++ b/docs/en-gb/modules/app/pages/mobile-box-picking.adoc
@@ -113,7 +113,7 @@ Under *Authorisations*, open the section *Stock » Warehouses » Warehouse locat
 [TIP]
 .Edit several user accounts at once
 ====
-Use xref:basics:manage-users.adoc#70[roles] to assign the same rights to multiple users. Roles save you from having to edit each user account individually.
+Use xref:business-decisions:user-accounts-access.adoc#70[roles] to assign the same rights to multiple users. Roles save you from having to edit each user account individually.
 ====
 
 [TIP]
