--- a/docs/en-gb/modules/orders/pages/accounting.adoc
+++ b/docs/en-gb/modules/orders/pages/accounting.adoc
@@ -536,7 +536,7 @@ Setting up revenue accounts for revenues that are exempt from VAT:
 [#820]
 === Saving booking accounts for plentymarkets POS events (plentymarkets app version 1.7.3 and higher)
 
-Orders generated in plentyPOS are assigned to the xref:orders:accounting.adoc#800[revenue accounts] saved in plentymarkets. Because deposits, withdrawals and till count discrepancies are not orders, you can save booking accounts for these POS events. For further information on how to save booking accounts for POS events, refer to the xref:pos:integrating-plentymarkets-pos.adoc#940[Integrating POS] page of the manual.
+Orders generated in plentyPOS are assigned to the xref:orders:accounting.adoc#800[revenue accounts] saved in plentymarkets. Because deposits, withdrawals and till count discrepancies are not orders, you can save booking accounts for these POS events. For further information on how to save booking accounts for POS events, refer to the xref:pos:integrating-plentymarkets-pos.adoc#950[Integrating plentyPOS] page of the manual.
 
 [#850]
 == Copying settings to other locations
