--- a/docs/en-gb/modules/pos/pages/plentymarkets-pos-for-pos-users.adoc
+++ b/docs/en-gb/modules/pos/pages/plentymarkets-pos-for-pos-users.adoc
@@ -524,12 +524,12 @@ Opening the order search:
 . Tap on *Load order*. +
 → The order search opens.
 
-Enter the order ID or the receipt number into the search field. Tap on *Search* to access the order data. Now you can xref:pos:plentymarkets-pos-for-pos-users,adoc#370[finalise the return] or hand over the xref:pos:pos-online-orders.adoc#[items that were purchased online].
+Enter the order ID or the receipt number into the search field. Tap on *Search* to access the order data. Now you can xref:pos:plentymarkets-pos-for-pos-users.adoc#370[finalise the return] or hand over the xref:pos:pos-online-orders.adoc#[items that were purchased online].
 
 [#520]
 ==== Retrieving an order automatically
 
-If you want to retrieve orders automatically, you need to print xref:pos/:ntegrating-plentymarkets-pos.adoc#120[barcodes on your customer receipts]. Open the POS shopping cart or the order search.
+If you want to retrieve orders automatically, you need to print xref:pos:integrating-plentymarkets-pos.adoc#120[barcodes on your customer receipts]. Open the POS shopping cart or the order search.
 
 [.instruction]
 Opening the POS shopping cart or the order search:
@@ -541,7 +541,7 @@ Opening the POS shopping cart or the order search:
 . Tap on *Load order*. +
 → The order search opens.
 
-Scan the barcode on the receipt. Now you can xref:pos:plentymarkets-pos-for-pos-users,adoc#370[finalise the return] or hand over the xref:pos:pos-online-orders.adoc#[items that were purchased online].
+Scan the barcode on the receipt. Now you can xref:pos:plentymarkets-pos-for-pos-users.adoc#370[finalise the return] or hand over the xref:pos:pos-online-orders.adoc#[items that were purchased online].
 
 
 [#525]
