--- a/docs/en-gb/modules/app/pages/item-search.adoc
+++ b/docs/en-gb/modules/app/pages/item-search.adoc
@@ -51,7 +51,7 @@ Customising the item search:
 *_Tip:_* Templates let you control, e.g. which information is displayed first, second, third, etc and which font size each piece of information should have. In other words, templates let you control how information is displayed in the search results and the detailed view of an item.
 
 | *Item label*
-|Do you want to use the plentymarkets app to print item labels? Choose the <<item/settings/barcodes#800, item label that you’ve designed for this purpose>>. +
+|Do you want to use the plentymarkets app to print item labels? Choose the xref:item:barcodes.adoc#800[item label that you’ve designed for this purpose]. +
 *_Tip:_* This area is only displayed if you’ve xref:app:installation.adoc#2050[linked the app to plentyBase].
 
 | *Printer*
