--- a/docs/en-gb/modules/app/pages/receiving-rebooking.adoc
+++ b/docs/en-gb/modules/app/pages/receiving-rebooking.adoc
@@ -2,7 +2,7 @@
 :author: team-mobile
 :keywords: Incoming items app, book in items app, book incoming items app, redistribute items app, redistribution app
 
-Did you know that you can not only book in and redistribute items in the xref:app:working-with-redistributions.adoc#[plentymarkets back end], but also in the plentymarkets app?
+Did you know that you can not only book in and redistribute items in the xref:stock-management:managing-stocks.adoc#[plentymarkets back end], but also in the plentymarkets app?
 
 This page contains step-by-steps instructions on how to set up and use these functions.
 
