fix quick start links

--- a/docs/en-gb/modules/plugins/partials/marketplace-plugin-kaufen-en_gb.adoc
+++ b/docs/en-gb/modules/plugins/partials/marketplace-plugin-kaufen-en_gb.adoc
@@ -9,7 +9,7 @@ Purchasing plugins:
 → The marketplace opens in a new tab. +
 → icon:map-signs[] *_Or:_* Sign into link:http://marketplace.plentymarkets.com/en/[plentyMarketplace^] using your My account login details.
 . Open a category and select the plugin you want to purchase.
-. In the detail view of the plugin, click on **Go to checkout**. You can find an overview of all purchase options in <<tabelle-kaufoptionen>>. +
+. In the detail view of the plugin, click on **Go to checkout**. You can find an overview of all purchase options in <<table-purchase-types>>. +
 → The **Checkout** window opens.
 . Accept the terms and conditions.
 . Click on **Order now**. +
