--- a/docs/en-gb/modules/welcome/pages/quick-start-automating-processes.adoc
+++ b/docs/en-gb/modules/welcome/pages/quick-start-automating-processes.adoc
@@ -152,4 +152,4 @@ Work through the check list in order to review your settings for automating proc
 * xref:automation:best-practices-automation.adoc#[Best Practices: Procedure manager and event procedures]
 * xref:automation:setting-up-processes.adoc#[Setting up processes]
 
-TIP: Continue to the xref:welcome:quick-start-guide-final-steps.adoc#[final steps]
+TIP: Continue to the xref:welcome:quick-start-final-steps.adoc#[final steps]
