--- a/docs/en-gb/modules/welcome/pages/quick-start-markets.adoc
+++ b/docs/en-gb/modules/welcome/pages/quick-start-markets.adoc
@@ -5,7 +5,7 @@
 :id: C0B258D
 :author: team-plenty-channel
 
-IMPORTANT: Have you already prepared your order processing? Not yet? Return to xref:quick-start:quick-start-order-processing.adoc#[preparing order processing].
+IMPORTANT: Have you already prepared your order processing? Not yet? Return to xref:welcome:quick-start-order-processing.adoc#[preparing order processing].
 
 Orders are not only placed via your online shop, but also on different markets on which you offer items. plentymarkets enables you to integrate a variety of markets in your system. You can easily manage the orders coming in from those sales channels in your plentymarkets back end.
 
@@ -39,4 +39,4 @@ You can also search for partner agencies to support you with setting up the inte
 Visit link:https://marketplace.plentymarkets.com/en/plugins/sales/marketplaces[plentyMarketplace^] to discover more markets and link:https://marketplace.plentymarkets.com/en/plugins/sales/price-comparisons[price search engines^]. Go to the *Description* tab to access comprehensive setup instructions and other important information.
 ====
 
-TIP: Continue with xref:quick-start:quick-start-plugins.adoc#[Adding plugins to the system]
+TIP: Continue with xref:welcome:quick-start-plugins.adoc#[Adding plugins to the system]
