--- a/docs/en-gb/modules/welcome/pages/quick-start-preparing-order-processing.adoc
+++ b/docs/en-gb/modules/welcome/pages/quick-start-preparing-order-processing.adoc
@@ -30,7 +30,7 @@ Carrying out the basic settings:
 *b) depending on the item’s main warehouse*: With this option, the main warehouse assigned to an item decides about the warehouse that is automatically selected. The main warehouse has to be saved in the variation data beforehand. Selecting this option makes sense if you always want to ship particular items from a fixed warehouse. +
 *c) depending on the highest stock level*: This option selects the warehouse according to the highest stock level of the variation. Selecting this option makes sense if an item is shipped from several different warehouses. We also recommend this option if you start your business using only one warehouse for all variations. If you start shipping items from several different warehouses later on, you do not have to change this setting.
 
-A more detailed explanation of all the warehouse options can be found under <<orders/basic-settings##intable-warehouse-selection, Automatic warehouse selection>>.
+A more detailed explanation of all the warehouse options can be found under xref:orders:basic-settings.adoc#intable-warehouse-selection[Automatic warehouse selection].
 
 | *Status changes to 4 instead of 5 if stock is missing*
 |We recommend selecting *YES* here. This setting prevents orders containing items that are out of stock from entering the order status *[5] Cleared for shipping* by mistake. Instead, the orders automatically remain in *status [4] In preparation for shipping*.
@@ -265,4 +265,4 @@ Work through the checklist in order to review your settings for preparing order 
 * xref:orders:order-documents.adoc#[Order documents]
 * xref:orders:order-referrer.adoc#[Order referrer].
 
-Continue with xref:quick-start:quick-start-markets.adoc#[Integrating markets].
+Continue with xref:welcome:quick-start-markets.adoc#[Integrating markets].
