--- a/docs/en-gb/modules/welcome/pages/quick-start-setting-up-payment-processing.adoc
+++ b/docs/en-gb/modules/welcome/pages/quick-start-setting-up-payment-processing.adoc
@@ -83,6 +83,6 @@ The settings on VAT rates and all other options in the *Accounting* tab depend o
 
 * xref:orders:accounting.adoc#[Accounting]
 * xref:payment:beta-managing-payments.adoc#[Managing payments]
-* xref:payment:managing-bank-details.adoc#63[Managing customer bank data]
+* xref:payment:managing-bank-details.adoc#bank-details-customer[Managing customer bank data]
 
 TIP: Continue to xref:welcome:quick-start-stock-management.adoc#[Setting up a warehouse and supplier].
