--- a/docs/en-gb/modules/welcome/pages/quick-start.adoc
+++ b/docs/en-gb/modules/welcome/pages/quick-start.adoc
@@ -24,7 +24,7 @@ As you probably already know, plentymarkets is a complex system if you want to u
 
 Of course we do not want to discourage you from really delving into the topics that interest you most. To help with this, we will provide you with a number of related links at the end of each chapter of the quick start.
 
-Also, if you have not already done so, make sure that your computer fulfils all the xref:quick-start:system-requirements.adoc#100[system requirements].
+Also, if you have not already done so, make sure that your computer fulfils all the xref:welcome:quick-start-system-requirements.adoc#100[system requirements].
 
 Ready? Then let’s go! ...Or, well, maybe two more tips first:
 
