--- a/docs/de-de/modules/plugins/partials/marketplace-plugin-kaufen.adoc
+++ b/docs/de-de/modules/plugins/partials/marketplace-plugin-kaufen.adoc
@@ -9,7 +9,7 @@ Plugin kaufen:
 → Der Marktplatz wird in einem neuen Tab geöffnet. +
 → icon:map-signs[] *_Oder:_* Melde dich direkt auf link:http://marketplace.plentymarkets.com/de/[plentyMarketplace^] mit deinen Zugangsdaten aus dem Mein Konto-Bereich an.
 . Wähle ein Plugin aus einer Kategorie.
-. Klicke in der Detailansicht des Plugins auf **Plugin kaufen**. Eine Übersicht aller Kaufoptionen findest du in <<tabelle-kaufoptionen>>. +
+. Klicke in der Detailansicht des Plugins auf **Plugin kaufen**. Eine Übersicht aller Kaufoptionen findest du in <<table-purchase-types>>. +
 → Das Fenster **Kasse** wird geöffnet.
 . Nimm die Nutzungsbedingungen zur Kenntnis.
 . Klicke auf **Jetzt kaufen**. +
