--- a/docs/en-gb/modules/stock-management/pages/box-picking.adoc
+++ b/docs/en-gb/modules/stock-management/pages/box-picking.adoc
@@ -304,7 +304,7 @@ For such cases, the view on each item contains shortcuts which allow you to quic
 
 | *Item information*
 |material:info[]
-| Opens a page with additional information on the item. Depending on the setting you have carried out for the xref:stock-managment:installation-and-initial-setup.adoc#intable-other-settings[Shortcut behaviour] option, you will be asked if you want to automatically return to the item list after viewing the item information.
+| Opens a page with additional information on the item. Depending on the setting you have carried out for the xref:stock-management:installation-and-initial-setup.adoc#intable-other-settings[Shortcut behaviour] option, you will be asked if you want to automatically return to the item list after viewing the item information.
 
 |====
 
