--- a/docs/en-gb/modules/stock-management/pages/managing-stocks.adoc
+++ b/docs/en-gb/modules/stock-management/pages/managing-stocks.adoc
@@ -409,7 +409,7 @@ You can export or import stock data and this way you can let your system know ab
 * xref:data:stock.adoc#[Stock],
 * xref:data:variationsupplier.adoc#[VariationSupplier],
 * xref:data:variationwarehouse.adoc#[VariationWarehouse] and
-* xref:data:warehouse.adoc#[Warehouse]
+* xref:data:elasticSync-warehouse.adoc#[Warehouse]
 
 All data formats available in plentymarkets as well as a general description on how to export or import data from or into plentymarkets can be found on the xref:data:data.adoc#[data] manual page.
 
